[feature]: product swagger
