# src/routes/product.js
@@ -1,10 +1,29 @@
 const express = require("express");
-const Common = require('../model/Common')
+const Common = require('../model/Common');
+const Joi = require("joi");
 const router = express.Router()
+
 
 router.get('/', async (req, res) => {
     try {
-        const result = await Common.list("product")
+        /*  #swagger.tags = ['Product']
+            #swagger.description =  "不傳任何參數，將會回傳全部資料"
+        */
+
+        /* #swagger.parameters['name']= {
+                in:"query",
+                description: '產品名稱',
+                type: 'string'
+            }
+        */
+
+        /* #swagger.parameters['category'] = {
+                in:"query",
+                description: '產品分類',
+                type: 'string'
+            }
+         */
+        const result = await Common.list("product", req.query)
         res.status(200).json(result)
     } catch (error) {
         res.status(400).json({ message: error.message })
@@ -14,6 +33,8 @@ router.get('/', async (req, res) => {
 
 router.get('/:id', async (req, res) => {
     try {
+        /* #swagger.tags = ['Product'] */
+
         const result = await Common.find('product', { "_id": req.params.id })
         res.status(200).json(result)
     } catch (error) {
@@ -23,20 +44,39 @@ router.get('/:id', async (req, res) => {
 
 
 router.post('/', async (req, res) => {
-    try {
-        await Common.insert("product", {
-            id: req.body.id,
-            name: req.body.name,
-        })
-        res.status(200).json({ message: "success" })
-    } catch (error) {
+    /*  #swagger.tags = ['Product'] */
+
+    /*  #swagger.requestBody = {
+            required: true,
+            schema:{$ref:"#/components/schemas/product"}
+        } 
+    */
+
+    const productSchema = Joi.object({
+        name: Joi.string().required(),
+        points: Joi.number().integer().min(0).required(),
+        category: Joi.string().required()
+    })
+
+    const { error, value } = productSchema.validate(req.body)
+
+    if (error) {
         res.status(400).json({ message: error.message })
+    } else {
+        try {
+            await Common.insert("product", value)
+            res.status(200).json({ message: "created" })
+        } catch (error) {
+            res.status(400).json({ message: error.message })
+        }
     }
 })
 
-router.delete('/', async (req, res) => {
+router.delete('/:id', async (req, res) => {
     try {
-        await Common.delete("product", req.body)
+        /* #swagger.tags = ['Product'] */
+
+        await Common.delete("product", { "_id": req.params.id })
         res.status(200).json({ message: "success" })
     } catch (error) {
         res.status(400).json({ message: error.message })
@@ -45,8 +85,15 @@ router.delete('/', async (req, res) => {
 
 router.put('/:id', async (req, res) => {
     try {
-        const id = req.params.id
-        await Common.update("product", { "_id": id }, req.body)
+        /* #swagger.tags = ['Product'] */
+
+        /* #swagger.requestBody = {
+            required:true,
+            schema:{$ref:"#/components/schemas/productUpdate"}
+        }
+        */
+
+        await Common.update("product", { "_id": req.params.id }, req.body)
         res.status(200).json({ message: "success" })
     } catch (error) {
         res.status(400).json({ message: error.message })
